--- a/notebooks/03_statistical_models.ipynb
+++ b/notebooks/03_statistical_models.ipynb
@@ -264,11 +264,11 @@
     
     "df = pd.read_csv('../data/AAPL.csv', index_col=0, parse_dates=True)\n",
     "df.index.name = 'Date'\n",
-    "df = df.reset_index()  
+    "df = df.reset_index()\n",
     "\n",
   
     "df_prophet = df[['Date', 'Close']].rename(columns={'Date': 'ds', 'Close': 'y'})\n",
-    "df_prophet['y'] = pd.to_numeric(df_prophet['y'], errors='coerce')  
+    "df_prophet['y'] = pd.to_numeric(df_prophet['y'], errors='coerce')",
     "df_prophet.dropna(inplace=True)\n",
     "\n",
    
