--- a/notebooks/04_lstm_model.ipynb
+++ b/notebooks/04_lstm_model.ipynb
@@ -875,7 +875,7 @@
    ],
    "source": [
     "df = pd.read_csv('../data/AAPL.csv', skipinitialspace=True)\n",
-    "df.columns = df.columns.str.strip()  # strip spaces\n",
+    "df.columns = df.columns.str.strip()  \n",
     "print(df.columns)\n"
    ]
   },
@@ -891,7 +891,7 @@
     "\n",
     
     "df = pd.read_csv('../data/AAPL.csv', skipinitialspace=True)\n",
-    "df.columns = df.columns.str.strip()  # ensure clean column names\n",
+    "df.columns = df.columns.str.strip()  \n",
     "\n",
     
     "df['Close'] = pd.to_numeric(df['Close'], errors='coerce')\n",
