--- a/notebooks/05_model_evaluation.ipynb
+++ b/notebooks/05_model_evaluation.ipynb
@@ -5,7 +5,7 @@
    "id": "3d0b5f19",
    "metadata": {},
    "source": [
-    "# 05 - Model Evaluation"
+ 
    ]
   },
   {
@@ -33,7 +33,7 @@
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "import numpy as np\n",
     "\n",
-    "# Dummy true/pred values\n",
+
     "y_true = np.array([100, 102, 104])\n",
     "y_pred = np.array([101, 103, 105])\n",
     "\n",
@@ -67,7 +67,7 @@
     "y_pred = np.array([101, 103, 105])\n",
     "\n",
     "mse = mean_squared_error(y_true, y_pred)\n",
-    "rmse = np.sqrt(mse)  # manual RMSE\n",
+    "rmse = np.sqrt(mse)  \n",
     "mae = mean_absolute_error(y_true, y_pred)\n",
     "\n",
     "print(f'RMSE: {rmse:.2f}')\n",
